--- a/atto-lisp.cabal
+++ b/atto-lisp.cabal
@@ -18,8 +18,9 @@ library
     attoparsec    >= 0.8.5.1 && < 0.10,
     base          >= 4.2     && < 5,
     blaze-builder >= 0.3     && < 0.4,
-    blaze-textual >= 0.1     && < 0.2,
+    blaze-textual >= 0.1     && < 0.3,
     bytestring    >= 0.9     && < 0.10,
+    containers    >= 0.3     && < 0.5,
     deepseq       >= 1.1     && < 1.2,
     text          >= 0.10    && < 0.12
 
