--- a/atto-lisp.cabal
+++ b/atto-lisp.cabal
@@ -1,5 +1,5 @@
 name:                   atto-lisp
-version:                0.2.1.2
+version:                0.2.2
 license:                BSD3
 license-file:           LICENSE
 author:                 Thomas Schilling <nominolo@googlemail.com>
@@ -12,17 +12,19 @@ category:               Text, Data
 stability:              provisional
 build-type:             Simple
 cabal-version:          >= 1.10
+extra-source-files:
+  changelog.md
 
 library
   build-depends:
-    attoparsec    >= 0.8.5.1 && < 0.11,
+    attoparsec    >= 0.10    && < 0.13,
     base          >= 4.2     && < 5,
     blaze-builder >= 0.3     && < 0.4,
     blaze-textual >= 0.1     && < 0.3,
     bytestring    >= 0.9     && < 0.11,
     containers    >= 0.3     && < 0.6,
     deepseq       >= 1.1     && < 1.4,
-    text          >= 0.10    && < 0.12
+    text          >= 0.10    && < 1.3
 
   exposed-modules:
     Data.AttoLisp
