--- a/atto-lisp.cabal
+++ b/atto-lisp.cabal
@@ -1,5 +1,5 @@
 name:                   atto-lisp
-version:                0.2.2.2
+version:                0.2.2.2.1
 license:                BSD3
 license-file:           LICENSE
 author:                 Thomas Schilling <nominolo@googlemail.com>
@@ -17,14 +17,14 @@ extra-source-files:
 
 library
   build-depends:
-    attoparsec    >= 0.10    && < 0.14,
-    base          >= 4.2     && < 5,
-    blaze-builder >= 0.3     && < 0.5,
-    blaze-textual >= 0.1     && < 0.3,
-    bytestring    >= 0.9     && < 0.11,
-    containers    >= 0.3     && < 0.6,
-    deepseq       >= 1.1     && < 1.5,
-    text          >= 0.10    && < 1.3
+    attoparsec,
+    base         >= 4.2     && < 5,
+    blaze-builder,
+    blaze-textual,
+    bytestring   ,
+    containers   ,
+    deepseq      ,
+    text          
 
   exposed-modules:
     Data.AttoLisp
